# opencv-demo

./: .gitignore  CMakeLists.txt  opencv-demo.cpp
include/: alg_type.h  common.h
